--- a/views/viewCart.ejs
+++ b/views/viewCart.ejs
@@ -132,7 +132,7 @@
     <%- include('partials/navbar.ejs') %>
 
     <div class="container">
-        <h2>🛒 Shopping Cart</h2>
+        <h2>🛒Cart</h2>
 
         <% if (!session.user || session.user.userRole === "admin") { %>
             <div class="cart-message">🚫 Only for users</div>
